# pyscroll-ce

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
apps/demo/: camera_demo.py  demo-stitched.py  demo.py  procedural.py  quadtree_visualizer.py  tile_animation_enhanced.py  tile_animation_group.py  tile_animation_simple.py  translate.py  translate_buffered.py
apps/scripts/: pyscrollgroup_benchmark.py  quadtree_benchmark.py  quadtree_hitmap.py  quadtree_vs_bruteforce.py
apps/tutorial/: quest.py
benchmark/: bench_animation_macro.py  bench_animation_micro.py  latest_results.md  pyscrollgroup_benchmark.py  quadtree_benchmark.py  quadtree_depth_benchmark.py  viewport_benchmark.py
docs/: index.rst
pyscroll/: animation.py  animation_pipeline.py  buffer_manager.py  camera.py  camera_manager.py  common.py  data.py  group.py  isometric.py  orthographic.py  quadtree.py  renderer_state.py  scroll_strategies.py  sprite_manager.py  sprite_pipeline.py  tile_renderer.py  viewport.py  viewport_pipeline.py
pyscroll/cameras/: __init__.py  base.py  (+9 more)
tests/: conftest.py  test_animation.py  test_animation_pipeline.py  test_buffer_manager.py  test_camera.py  test_camera_manager.py  test_isometric.py  test_isometric_renderer.py  test_map_aggregator.py  test_procedural_data.py  test_pyscroll.py  test_pyscroll_data_adapter.py  test_pyscroll_group.py  test_quadtree.py  test_scroll_strategies.py  test_sprite_manager.py  test_sprite_pipeline.py  test_tile_renderer.py  test_tiled_map_data.py  test_viewport.py  test_viewport_pipeline.py
(+8 files in other folders)
